# Discrete-Rosenbrock

./: .gitignore  3.docx  CMakeLists.txt  README.md  main.cpp  report_listing_lab2.txt  test_scenarios_f1.txt  test_scenarios_f2.txt
include/lab2/: Constants.h  MainWindow.h  Matplot2DViewer.h  Matplot3DViewer.h  MuParserObjectiveParser.h  ObjectiveFunction.h  ObjectiveParser.h  PredefinedFunctions.h  RosenbrockDiscreteMethod.h
libs/muparser/include/: muParserTemplateMagic.h
libs/muparser/src/: muParser.cpp
src/: Constants.cpp  MainWindow.cpp  Matplot2DViewer.cpp  Matplot3DViewer.cpp  MuParserObjectiveParser.cpp  PredefinedFunctions.cpp  RosenbrockDiscreteMethod.cpp
